<resources>
    <string name="app_name">Food Inspiration</string>
    <string name="password_hint">Password</string>
    <string name="email_hint">Email</string>
    <string name="sign_up_button_label">Sign Up</string>
    <string name="signup_error_message">Please make sure you enter an email address and password!</string>
    <string name="signup_error_title">Error!</string>
    <string name="signup_success">Account successfully created! You can now Login.</string>
    <string name="login_button_label">Login</string>
    <string name="sign_up_text">Sign Up!</string>
    <string name="title_activity_login">Sign in</string>
    <string name="add_item">Add New Item</string>
    <string name="action_logout">Logout</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="ranklabel">"Rank : "</string>
    <string name="activity_title">Batch + Firebase</string>
    <string name="welcome_text">Welcome!\n\nPlease sign in to continue.</string>
    <string name="anon_sign_in">Sign in anonymously</string>
    <string name="login_error_title">Login error</string>
    <string name="login_error_message">An error occurred while trying to log in.\n\nPlease check your internet connection and try again!</string>
    <string name="ok">OK</string>
    <string name="copy_uid">Copy UID</string>
    <string name="logout">Logout</string>
    <string name="login_service">Login service</string>
    <string name="user_id">User ID</string>
    <string name="edittext_warning">Note: Changes made in the text boxes will not be applied.</string>
    <string name="action_image">Action Image</string>
    <string name="facebook_app_id">719750678164064</string>
</resources>
